--- a/tipos.html
+++ b/tipos.html
@@ -205,7 +205,7 @@
         <h2> Según su portabilidad</h2>
         <ul>
             <li> <div align="right" style="float: margin-right;">
-  <img align="right" src="computadora de escritorio.png" alt="Computadora de escritorio" style="width:25%; border-radius:10px; margin-top:6px; margin-left: 10px;"  >  <font size="4" ><div class="justificado">
+  <img align="right" src="Computadora de escritorio.png" alt="Computadora de escritorio" style="width:25%; border-radius:10px; margin-top:6px; margin-left: 10px;"  >  <font size="4" ><div class="justificado">
                 <strong>Computadoras de escritorio (Desktop):</strong> No portátiles, requieren energía constante. Son potentes, expandibles y usadas para tareas que requieren alto rendimiento.
             </li>
        <br>  <br>    <br><br><br><li> <div align="right" style="float: margin-right;">
@@ -343,3 +343,4 @@
  <footer style="text-align: center; padding: 20px;   color: #FFFFFF;">
     <p>&copy; 2025 Heiber Darío Díaz Bejarano. Todos los derechos reservados.
 </footer>
+
